// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Provisioners Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container provisioners-table data-card__table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell align-left"
            >
              Staking Address
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Owner
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Stake
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              Slashes
            </th>
            
             
            <th
              class="table__header-cell align-right"
            >
              Accumulated Reward
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              m6dy2gz3jC...tW82FWtnpf
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="m6dy2gz3jC...tW82FWtnpf"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,121.257296087 DUSK"
                data-tooltip-type="info"
              >
                7,121
                .
                <span
                  class="decimal-shadow"
                >
                  26
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              m9dVuRgr3C...94r33pFQyz
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="m9dVuRgr3C...94r33pFQyz"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="6,923.840604194 DUSK"
                data-tooltip-type="info"
              >
                6,923
                .
                <span
                  class="decimal-shadow"
                >
                  84
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mHGvQ9Xdjz...iTfxTvgn7f
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="0200000000000000000000000000000000000000000000000000000000000000"
              >
                Contract
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              4,800
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              4,320
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="89.505343279 DUSK"
                data-tooltip-type="info"
              >
                89
                .
                <span
                  class="decimal-shadow"
                >
                  51
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mLx5HUo5Ph...BrRgEzoka8
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="mLx5HUo5Ph...BrRgEzoka8"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              1,234
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              4,320
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="29.633646022 DUSK"
                data-tooltip-type="info"
              >
                29
                .
                <span
                  class="decimal-shadow"
                >
                  63
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mTgXDqkyVa...gAseybAsfU
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="0200000000000000000000000000000000000000000000000000000000000000"
              >
                Contract
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,518.756679536 DUSK"
                data-tooltip-type="info"
              >
                7,518
                .
                <span
                  class="decimal-shadow"
                >
                  76
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mUJHMDEBiT...FHNxRNhoAA
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="0200000000000000000000000000000000000000000000000000000000000000"
              >
                Contract
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              4,800
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              23,760
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="73.800637305 DUSK"
                data-tooltip-type="info"
              >
                73
                .
                <span
                  class="decimal-shadow"
                >
                  80
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mUUpjnXow2...SfzQcywzaW
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="0200000000000000000000000000000000000000000000000000000000000000"
              >
                Contract
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,653.541671166 DUSK"
                data-tooltip-type="info"
              >
                7,653
                .
                <span
                  class="decimal-shadow"
                >
                  54
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mWvq9EWD9b...oU7BY2oEDe
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="mWvq9EWD9b...oU7BY2oEDe"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              1,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              8,640
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="1.613840782 DUSK"
                data-tooltip-type="info"
              >
                1
                .
                <span
                  class="decimal-shadow"
                >
                  61
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mXKJ97xTtr...JgkCK2o7x4
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="mXKJ97xTtr...JgkCK2o7x4"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,512.060104659 DUSK"
                data-tooltip-type="info"
              >
                7,512
                .
                <span
                  class="decimal-shadow"
                >
                  06
                </span>
              </span>
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              mdXsA3Ee1Y...K8VZPimZ2J
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="mdXsA3Ee1Y...K8VZPimZ2J"
              >
                Account
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
            <td
              class="table__data-cell align-right"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,973.118109253 DUSK"
                data-tooltip-type="info"
              >
                7,973
                .
                <span
                  class="decimal-shadow"
                >
                  12
                </span>
              </span>
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should disable the \`Show More\` button is the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should hide the \`Show More\` button if an error has occurred 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
  </header>
   
  <div
    class="alert"
  >
    <svg
      class="dusk-icon dusk-icon--size--large"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
      />
    </svg>
    
     
    <header>
      <p>
        There was an error fetching the data.
      </p>
       
      <p
        class="alert__error-message"
      >
        error
      </p>
    </header>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Retry
      </span>
    </button>
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should render the \`ProvisionersCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
